Re-baseline Dockerfile (#38)